--- a/index.html
+++ b/index.html
@@ -756,7 +756,7 @@
 
 <body class="" id="body">
 
-  <div id="quote" class="fw-bold text-center h3 rounded-2"
+  <div id="quote" class="fw-bold fw-sm-none text-center rounded-2"
     style="background-image: linear-gradient(to right bottom, #ff094e, #1e07e8,#2685f1, #f10fa2); font-family: 'Arial Narrow', Arial, sans-serif;  color: #ffe414;">
     <p data-aos="fade-right" data-aos-duration="1000"> Websites that convert experiences that
       delight.</p>
