--- a/index.html
+++ b/index.html
@@ -1136,7 +1136,7 @@
       </div><br>
 
       <div class="projectphoto1">
-        <div data-aos="fade-down-right" class="heading">Project ChronoSync</div>
+        <div data-aos="fade-down-right" class="heading">Weather Prediction</div>
         <div class="project">
 
           <div data-aos="zoom-out" id="carouselExample2" class="carousel slide col-6" data-bs-ride="carousel">
