--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@
         0px 0px 65px rgba(88, 242, 28, 0.959);
 
     }
+    #Start .intro{
+      line-height: 100%;
+    }
 
     #Aboutme {
       padding-top: 60px;
@@ -420,7 +423,10 @@
 
       #Start .intro {
         margin: 80px 0px 0px 30px;
-        line-height: 20px;
+        font-size: 20px;
+        line-height: 120%;
+        width: 70%;
+        text-align: center;
       }
 
 
@@ -753,16 +759,16 @@
 
   <main class="d-flex flex-column">
     <div id="Start" class="">
-      <div class="intro text-white" style="" data-aos="fade-left" data-aos-duration="1500" data-aos-once="false">
-        <span class="" data-aos="fade-left">Aspiring B.Tech Student</span><br><br>
-        <span class=""> Seeking Dynamic Internship & Part-Time Roles </span><br><br>
-        <span class=""> Ready to Learn and Contribute</span><br><br>
-        <span class="" style="" width=""> As a <span class="role" style="">FrontEnd Developer. . . .
-          </span>
+      <div class="intro text-white" style="" >
+        <div class="" data-aos="fade-left" data-aos-duration="1500" data-aos-delay="300" data-aos-once="false">Aspiring B.Tech Student</div><br><br>
+        <div class="" data-aos="fade-left" data-aos-duration="1500" data-aos-delay="600" data-aos-once="false"> Seeking Dynamic Internship & Part-Time Roles </div><br><br>
+        <div class="" data-aos="fade-left" data-aos-duration="1500" data-aos-delay="900" data-aos-once="false"> Ready to Learn and Contribute</div><br><br>
+        <div class="" style="" width="" data-aos="fade-left" data-aos-delay="1200" data-aos-duration="1500" data-aos-once="false"> As a <span class="role" style="">FrontEnd Developer. . . .
+          </div>
 
       </div>
-      <div>
-        <img src="for github projrcts/deepak.jpg" data-aos="zoom-out-left" data-aos-duration="0" class="" style="border-radius: 31% 69% 23% 77% / 66% 18% 82% 34%; border: 1px solid #43e443;
+      <div data-aos="zoom-in-up" data-aos-duration="3000" >
+        <img src="for github projrcts/deepak.jpg" class="" style="border-radius: 31% 69% 23% 77% / 66% 18% 82% 34%; border: 1px solid #43e443;
              box-shadow: 0px 0px 50px 0px rgba(34, 245, 48, 0.911),
     0px 2px 4px rgba(248, 19, 19, 0.933),
     0px 4px 8px rgba(84, 255, 49, 0.919),
