--- a/index.html
+++ b/index.html
@@ -802,7 +802,7 @@
       <div id="navbar" class="navbar  rounded-bottom-5 navbar-expand-md"
         style="background-color: rgba(0, 0, 0, 0.3); backdrop-filter: blur(10px);  border-bottom:2px solid #F57D1F;">
         <div class="heading ms-md-5 ms-3 h4  navbar-brand  fw-bold" style="" data-aos="fade-right" data-aos-offset="0">
-          FrontEnd developer</div>
+         Deepakkumar</div>
         <button class="navbar-toggler btn me-md-5 me-3" style="border:1px solid #F57D1F;" data-bs-toggle="collapse"
           data-bs-target=".collapse" aria-controls="collapse" aria-expanded="false">
           <span class="navbar-toggler-ico"><i class="fa-solid fa-bars fa-md" style="color:white;"></i></span>
@@ -1084,6 +1084,114 @@
         style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; color: #F57D1F;">
         Projects</div>
 
+
+      <div class="projectphoto1">
+        <div data-aos="fade-down" class="heading">E-Commerce</div>
+        <div class="project">
+
+          <div data-aos="zoom-out" id="carouselExample2" class="carousel slide col-6" data-bs-ride="carousel">
+            <div class="carousel-indicators" style="background-color: rgba(0, 0, 0, 0.2); border-radius: 10px;">
+              <button type="button" data-bs-target="#carouselExample2 " data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExample2 " data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExample2 " data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="for github projrcts\ecommerce1.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="for github projrcts/ecommerce2.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="for github projrcts/ecommerce3.png" class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev carousel-dark" type="button" data-bs-target="#carouselExample2"
+              data-bs-slide="prev">
+              <span class="carousel-control-prev-icon " aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next carousel-dark" type="button" data-bs-target="#carouselExample2"
+              data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+          <span data-aos="zoom-out" class="content col-lg-4">
+            <ul class="">
+              <a href="https://deepak-05dktopg.github.io/host-ecommerce/" class="text-primary"><small>click here</small></a>
+              <li class="">User Interface and Experience </li>
+              <li class="">Google map Integration</li>
+              <li class="">Responsive Design </li>
+              <li class="">Clear Call-to-Action (CTA)</li>
+            </ul>
+          </span>
+        </div>
+      </div><br>
+
+      <div class="projectphoto1 ">
+        <span data-aos="fade-down" class="project3 d-flex justify-content-lg-end heading">Portofolio</span>
+
+        <div class="project2 d-flex justify-content-lg-around align-items-lg-center" style="">
+
+          <span data-aos="zoom-out" class="content col-lg-4">
+            <ul class="">
+              <a href="https://deepak-05dktopg.github.io/portofolio-hosting/" class="text-primary"><small>click here</small></a>
+              <li class="">Responsive Web Desighn</li>
+              <li class="">API Fetch</li>
+              <li class="">Carousel Implementation</li>
+              <li class="">Ultimate Hover, Animations and Transitions</li>
+            </ul>
+          </span>
+          <div data-aos="zoom-out" id="carouselExample1" class="carousel slide col-lg-6" data-bs-ride="carousel">
+            <div class="carousel-indicators" style="background-color: rgba(0, 0, 0, 0.2); border-radius: 10px;">
+              <button type="button" data-bs-target="#carouselExample1 " data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExample1 " data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExample1 " data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
+              <button type="button" data-bs-target="#carouselExample1 " data-bs-slide-to="3"
+                aria-label="Slide 4"></button>
+              <button type="button" data-bs-target="#carouselExample1 " data-bs-slide-to="4"
+                aria-label="Slide 5"></button>
+
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="for github projrcts/p2 1.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="for github projrcts/p2 2.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="for github projrcts/p2 3.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="for github projrcts/p2 4.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="for github projrcts/p2 5.png" class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev carousel-dark" type="button" data-bs-target="#carouselExample1"
+              data-bs-slide="prev">
+              <span class="carousel-control-prev-icon " aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next carousel-dark" type="button" data-bs-target="#carouselExample1"
+              data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
+      </div><br>
+
+      
       <div class="projectphoto1">
         <div data-aos="fade-down" class="heading">ChronoSync</div>
         <div class="project">
@@ -1160,116 +1268,11 @@
         </div>
       </div><br>
 
-      <div class="projectphoto1 ">
-        <span data-aos="fade-down" class="project3 d-flex justify-content-lg-end heading">Portofolio</span>
-
-        <div class="project2 d-flex justify-content-lg-around align-items-lg-center" style="">
-
-          <span data-aos="zoom-out" class="content col-lg-4">
-            <ul class="">
-              <a href="https://deepak-05dktopg.github.io/portofolio-hosting/" class="text-primary"><small>click here</small></a>
-              <li class="">Responsive Web Desighn</li>
-              <li class="">API Fetch</li>
-              <li class="">Carousel Implementation</li>
-              <li class="">Ultimate Hover, Animations and Transitions</li>
-            </ul>
-          </span>
-          <div data-aos="zoom-out" id="carouselExample1" class="carousel slide col-lg-6" data-bs-ride="carousel">
-            <div class="carousel-indicators" style="background-color: rgba(0, 0, 0, 0.2); border-radius: 10px;">
-              <button type="button" data-bs-target="#carouselExample1 " data-bs-slide-to="0" class="active"
-                aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExample1 " data-bs-slide-to="1"
-                aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExample1 " data-bs-slide-to="2"
-                aria-label="Slide 3"></button>
-              <button type="button" data-bs-target="#carouselExample1 " data-bs-slide-to="3"
-                aria-label="Slide 4"></button>
-              <button type="button" data-bs-target="#carouselExample1 " data-bs-slide-to="4"
-                aria-label="Slide 5"></button>
-
-            </div>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="for github projrcts/p2 1.png" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="for github projrcts/p2 2.png" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="for github projrcts/p2 3.png" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="for github projrcts/p2 4.png" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="for github projrcts/p2 5.png" class="d-block w-100" alt="...">
-              </div>
-            </div>
-            <button class="carousel-control-prev carousel-dark" type="button" data-bs-target="#carouselExample1"
-              data-bs-slide="prev">
-              <span class="carousel-control-prev-icon " aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next carousel-dark" type="button" data-bs-target="#carouselExample1"
-              data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
-        </div>
-      </div><br>
-
-      <div class="projectphoto1">
-        <div data-aos="fade-down" class="heading">E-Commerce</div>
-        <div class="project">
-
-          <div data-aos="zoom-out" id="carouselExample2" class="carousel slide col-6" data-bs-ride="carousel">
-            <div class="carousel-indicators" style="background-color: rgba(0, 0, 0, 0.2); border-radius: 10px;">
-              <button type="button" data-bs-target="#carouselExample2 " data-bs-slide-to="0" class="active"
-                aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExample2 " data-bs-slide-to="1"
-                aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExample2 " data-bs-slide-to="2"
-                aria-label="Slide 3"></button>
-            </div>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="for github projrcts\ecommerce1.png" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="for github projrcts/ecommerce2.png" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="for github projrcts/ecommerce3.png" class="d-block w-100" alt="...">
-              </div>
-            </div>
-            <button class="carousel-control-prev carousel-dark" type="button" data-bs-target="#carouselExample2"
-              data-bs-slide="prev">
-              <span class="carousel-control-prev-icon " aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next carousel-dark" type="button" data-bs-target="#carouselExample2"
-              data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
-          <span data-aos="zoom-out" class="content col-lg-4">
-            <ul class="">
-              <a href="https://deepak-05dktopg.github.io/host-ecommerce/" class="text-primary"><small>click here</small></a>
-              <li class="">User Interface and Experience </li>
-              <li class="">Google map Integration</li>
-              <li class="">Responsive Design </li>
-              <li class="">Clear Call-to-Action (CTA)</li>
-            </ul>
-          </span>
-        </div>
-      </div><br>
       <div class="projectphoto1">
         <div data-aos="fade-down" class="project3 d-flex justify-content-lg-end heading">Movie Web</div>
-        
-        <div class="project">
-          <span data-aos="zoom-out" class="content col-lg-4">
+        <span data-aos="zoom-out" class="content col-lg-4">
+
+        <div class="project2 d-flex justify-content-lg-around align-items-lg-center">
             <ul class="">
               <a href="https://main--movierapp.netlify.app/" class="text-primary"><small>click here</small></a>
               <li class="">User Interface and Experience </li>
@@ -1292,7 +1295,7 @@
                 <img src="for github projrcts/movieweb1.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="for github projrcts/movieweb3.png" class="d-block w-100" alt="...">
+                <img src="for github projrcts/movieweb2.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
                 <img src="for github projrcts/movieweb3.png" class="d-block w-100" alt="...">
