--- a/index.html
+++ b/index.html
@@ -88,12 +88,15 @@
       width: 250px;
       height: 250px;
       transition: .5s ease-in-out;
+      filter:grayscale(100%);
     }
 
     #Start img:hover {
       width: 300px;
       height: 300px;
       transition: .5s ease-in-out;
+      filter:none;
+
     }
 
     #Start .role {
