--- a/index.html
+++ b/index.html
@@ -358,9 +358,18 @@
     #Contact a {
       transition: 1s ease-in-out;
     }
-
+    i 
+     {
+      transition:transform .2s ease-in-out;
+    }
+    i:hover{
+      transition: transform 0.5s ease;
+      transform: rotate(360deg);
+     
+    }
+     
     #Contact a:hover {
-      transition: .2s ease-in-out;
+      transition:.2s ease-in-out;
       text-shadow:
         0px 0px 15px rgba(39, 32, 238, 0.96),
         0px 0px 25px rgba(251, 78, 20, 0.932),
